[tool.poetry]
name = "rest-api-with-python-django-rest-framework-and-docker-using-test-driven-development-tdd-"
version = "0.1.0"
description = ""
authors = ["Victor Hugo <vnoliveira@stone.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
djangorestframework = "^3.15.2"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
